# OpenGen

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: Dockerfile
docs/: architecture.md  decisions.md  verification-system.md  vision.md
src/opengen/: __init__.py
src/opengen/api/: client.py
src/opengen/models/: shared.py
src/opengen/worker/: client.py  config.py  executor.py  hardware.py
tests/: test_models.py
