[project]
name = "opengen"
version = "0.1.0"
description = "OpenGen worker client and shared libraries for the distributed AI research system"
authors = [
    { name = "Imasola" },
]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
keywords = ["ai", "research", "distributed-computing", "knowledge-graph", "science"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
all = ["opengen[dev]"]

[project.urls]
Homepage = "https://opengen.live"
Repository = "https://github.com/Imasola/OpenGen"
Documentation = "https://github.com/Imasola/OpenGen/tree/main/docs"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
